# example-10-releases-python-jogirgis

./: LICENSE  setup.cfg  tox.ini
docs/: conftest.html  index.html
docs/guess/: GuessResult.html  GuessingGame.html  Main.html  Renderer.html  index.html
guessinggame/: __init__.py  __main__.py
test/: __init__.py
