[metadata]
name = guessinggame
version = 0.0.1
author = Joseph Girgis
author_email = jogirgis@ksu.edu
description = A small guessing game like hangman
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/K-State-Computational-Core/example-10-releases-python-jogirgis
project_urls =
    Bug Tracker = https://github.com/K-State-Computational-Core/example-10-releases-python-jogirgis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = guessinggame
packages = find:
python_requires = >=3.6
include-package-date = True

[options.package_data]
guessinggame = py.typed

[options.packages.find]
where = guessinggame